2003-10-02  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	(placement_grid_new), (canvas_position_to_grid_position),
	(find_empty_location), (lay_down_icons_tblr),
	(nautilus_icon_container_scroll_to_icon):
	Merge from HEAD:
	Force any scheduled relayout to run before scrolling.
	Separate SNAP_SIZE into SNAP_SIZE_X and SNAP_SIZE_Y.
	Make SNAP_SIZE_Y 1/4 of old SNAP_SIZE.

2003-09-29  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c (permission_button_toggled):
	Missed part of HEAD merger. This makes permission changes not crash.

2003-09-25  Ettore Perazzoli  <ettore@ximian.com>

	* src/file-manager/fm-directory-view.c
	(struct FMDirectoryViewDetails): Removed member
	display_pending_timeout_id.
	(schedule_timeout_display_of_pending_files): Removed.
	(unschedule_timeout_display_of_pending_files): Removed.
	(display_pending_timeout_callback): Removed.
	(unschedule_display_of_pending_files): Don't call
	unschedule_timeout_display_of_pending_files() since it's gone.
	(queue_pending_files): Schedule an idle display only if we are not
	loading, or if all the files have been seen.
	(finish_loading): Don't schedule a timeout display.

2003-09-19  Alexander Larsson  <alexl@redhat.com>

	* Merge from HEAD:

	* src/file-manager/fm-properties-window.c (permission_change_callback):
	Fix compilation error (bug #122537).
	Patch by david.hawthorne@sun.com
	Updated fix for bug #122537.
	
	* add-include-prefix:
	Fix to work correctly on MacOS X and NetBSD.
	Fixes bug #87835.
	
	* libnautilus-private/nautilus-file.c (nautilus_file_get_internal):
	Don't assert_not_reached for unsupported URIs when create == FALSE.
	Fixes bug #122265.

	* libnautilus/nautilus-view-standard-main.c (nautilus_view_instrument_for_failure):
	Correctly remove nautilus_view_never_got_frame_timeout timeout on destroy.
	Fixes #120904, thanks to Narayana Pattipati for diagnosing this.
